<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/command_menu_viewgroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".MainActivity">

    <Button
        android:id="@+id/load_obj_button"
        style="@style/BlueFrameButton"
        android:onClick="onClick"
        android:text="@string/load_obj" />

    <Button
        android:id="@+id/recent_obj_button"
        style="@style/BlueFrameButton"
        android:onClick="onClick"
        android:text="@string/recent_obj" />

    <Button
        android:id="@+id/settings_button"
        style="@style/BlueFrameButton"
        android:onClick="onClick"
        android:text="@string/settings" />

    <Button
        android:id="@+id/about_button"
        style="@style/BlueFrameButton"
        android:onClick="onClick"
        android:text="@string/about" />

</LinearLayout>